crates/keron-lang/tests/corpus/errors/parse/if_without_else.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: found end of input expected any, '#', or '"else"'
  --> 2:1
  |
2 | 
  | ^
